segunda modificacion index

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<a href="#">ELPOPULAR.PE</a>
 						<a href="#">FUNDACIÓN GUSTAVO MOHME LLONA</a>
 					</div>
-					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 buscador">
+					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 buscador text-right">
 						<button type="button" class="btn btn-danger">SUSCRÍBETE AL BOLETÍN</button>
 						<a href="#"><i class="icon fa fa-facebook"></i></a>
 						<a href="#"><i class="icon fa fa-twitter"></i></a>
@@ -47,7 +47,7 @@
 				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 					<img class="logo-img" src="image/logo-la-republica.jpg"/>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 box-autor">
 					<div class="noticia-nac text-center">
 						<div class="domingo">DOMINGO</div>
 						HABLA LA LIDERESA DEL NACIONALISMO
