integración noticias destacadas y especiales - Blog

--- a/index.html
+++ b/index.html
@@ -567,6 +567,75 @@
 										<p class="mas center-block">Más en <a href="#">Aweita.pe</a></p>
 									</div>
 								</div>
+							<div class="hidden-md-down news">
+								<hr class="gtitulo">
+								<div class="gtext center-block bcg">
+									<h5 class="text-center">FOTOS DESTACADAS</h5>
+								</div>
+								<a href="#">
+									<img src="image/img_fotodes_prominent.jpg" class="iborder big"></a>
+								<a href="#">
+									<p class="mt">Lineas de Nazca: admiten prisión<br>preventiva de 6 meses para activista de<br> Greenpeace | FOTOS</p>
+								</a>
+								<div class="sml1">
+									<a href="#">
+										<img src="image/img_fotodes.jpg" class="iborder sml">
+									</a>
+									<a href="#">
+										<p>Uchuraccay: El pueblo que <br>recibe con flores a quienes<br> llegan a pie | FOTOS Y VIDEO</p>
+									</a>
+								</div>
+								<div class="sml1">
+									<a href="#">
+										<img src="image/img_fotodes.jpg" class="iborder sml">
+									</a>
+									<a href="#">
+										<p>Alianza Lima vs Fénix:<br>intimos ganaron 1-0 en <br>"Noche Blanquiazul" | VIDEO Y FOTOS</p>
+									</a>
+								</div>
+								<div class="sml1">
+									<a href="#">
+									 	<img src="image/img_fotodes.jpg" class="iborder sml">
+									</a>
+									<a href="#"> 
+										<p>Alianza Lima vs Fénix:<br>intimos ganaron 1-0 en <br>"Noche Blanquiazul" | VIDEO Y FOTOS</p>
+									</a>
+								</div>
+								<hr class="mv-42">
+								<hr class="gtitulo">
+								<div class="gtext center-block bcg">
+									<h5 class="text-center">ESPECIALES</h5>
+								</div>
+								<div class="ollanta">
+									<div class="rlj center-block">
+										<a href="#">
+											<p class="text-center">Régimen Laboral Juvenil</p>
+										</a>
+									</div>
+								</div>
+								<div class="ollanta">
+									<div class="rlj center-block">
+										<a href="#">
+											<p class="text-center">Régimen Laboral Juvenil</p>
+										</a>
+									</div>
+								</div>
+								<div class="ollanta">
+									<div class="rlj center-block">
+										<a href="#">
+											<p class="text-center">Régimen Laboral Juvenil</p>
+										</a>
+									</div>
+								</div>
+								<div class="ollanta">
+									<div class="rlj center-block">
+										<a href="#">
+											<p class="text-center">Especies peruanas en peligro de<br>extinción</p>
+										</a>
+									</div>
+								</div>
+								<hr> 
+							</div>
 						</div>
 					</div>
 
