tercera modificacion index header responsive

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 	<link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
-	<div class="header-sup">
+	<div class="header-sup family-oswald">
 		<div class="container">
 			<header>
-				<a href="#">
+				<a href="#" class="visible-lg visible-md hidden-sm hidden-xs">
 					<img  class="img-responsive img-cien" src="image/banner_top.jpg"/>
 				</a>
 				<div class="row">
@@ -24,6 +24,7 @@
 						<a href="#">LIBERO.PE</a>
 						<a href="#">ELPOPULAR.PE</a>
 						<a href="#">FUNDACIÓN GUSTAVO MOHME LLONA</a>
+						<a href="#">MOHME LLONA</a>
 					</div>
 					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 buscador text-right">
 						<button type="button" class="btn btn-danger">SUSCRÍBETE AL BOLETÍN</button>
@@ -41,25 +42,25 @@
 			</header>	
 		</div>
 	</div>
-	<div class="container">
+	<div class="container family-oswald">
 		<header class="header-logo">
 			<div class="row">
-				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 logo-img-header">
 					<img class="logo-img" src="image/logo-la-republica.jpg"/>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 box-autor">
-					<div class="noticia-nac text-center">
+					<div class="noticia-nac text-center relative">
 						<div class="domingo">DOMINGO</div>
 						HABLA LA LIDERESA DEL NACIONALISMO
 					</div>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-					<div class="autor-fondo">
-						<div class="autor">
+				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 box-autor-black relative">
+					<div>
+						<div class="autor-fondo">
 							<img class="img-editorial" src="image/img_editorial_text.jpg"/>
 							<div class="text-autor text-center">
 								<b>La corrupción, los orígenes</b><br>
-								por: Gustavo Mohme Llona
+								<i>por: Gustavo Mohme Llona</i>
 							</div>
 							<img class="img-autor" src="image/img_author.jpg"/>	
 						</div>
@@ -79,7 +80,6 @@
 			<a href="#" class="nav-red btn-nav linea-black">REGIONALES</a>
 			<a href="#" class="nav-red btn-nav">MÁS SECCIONES</a>
 		</div>
-
 		<div class="bg-gray-nav">
 			<ul class="list-unstyled">
 				<li class="btn-black btn-nav-gray visible-lg visible-md visible-sm visible-xs">
@@ -112,7 +112,7 @@
 			</ul>
 		</div>
 		<section class="publicidad-sec">
-			<a href="#">
+			<a href="#" class="hidden-sm hidden-xs">
 				<img class="img-cien" src="image/banner-header.jpg"/>
 			</a>
 		</section>
@@ -122,11 +122,11 @@
 				<a class="bg-if" href="#"><i class="fa fa-facebook"></i></a>
 				<a class="bg-it" href="#"><i class="fa fa-twitter"></i></a>
 				<a href="#"><i class="fa fa-google-plus"></i></a>
-				<p><a href="#">Hace 12 minutos</a></p>
-				<p><a href="#">POLÍTICA</a></p>
+				<p class="titulo-hora"><a href="#">Hace 12 minutos</a></p>
+				<p class="titulo-hora"><a href="#">POLÍTICA</a></p>
 			</div>
 			<div class="row">
-				<div class="col-lg-6">
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 					<div class="noticia-jne relative">
 						<div class="overlay">
 							<div class="noticia-texto texto-izq">
@@ -142,7 +142,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-6">
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 					<div class="noticia-der">
 						<div class="belaunde relative espacio">
 							<div class="overlay">
