reporte y mascotas - columnistas

--- a/index.html
+++ b/index.html
@@ -636,6 +636,232 @@
 								</div>
 								<hr> 
 							</div>
+							<!--blogs y caricaturas-->
+							<div class="ml">
+								<hr size="100%" class="gcarlin"/>
+								<div class="gtext center-block bcr">
+									<h5 class="text-center">CARLINCATURA DEL DIA</h5>
+								</div>
+								<a href="#">
+									<p class="text-center textcar"><b>Carlincaturas 30-01-2015</b></p>
+								</a>
+								<a href="#">
+									<img class="titular" src="image/img_carlincatura_sd.jpg">
+								</a>
+								<a href="#">
+								<p class="text-center textcar">Todas las Carlincaturas</p></a>
+								<hr>
+							</div>
+							<div class="mr">
+								<hr size="100%" class="gtitulo"/>
+								<div class="gtext center-block bcg">
+									<h5 class="text-center">NUESTROS BLOGGEROS</h5>
+								</div>
+								<div class="media">
+								<div class="media-left media-middle">
+								    <a href="#">
+								      <img class="media-object" src="image/img_blogueros.jpg" alt="image/img_blogueros.jpg">				   
+								    </a>
+								</div>
+								<div class="media-body">
+									<a>
+								    <h4 class="media-heading">
+								    <u class="subrayado">Augusto Álvarez Rodrich</u>
+								    <p><b>Charlie Hebdo, historia que no debe repetirse</b></p></h4>
+								    </a>
+								</div>
+								</div>
+								<div class="media">
+								<div class="media-left media-middle">
+								    <a href="#">
+								      <img class="media-object" src="image/img_blogueros.jpg" alt="image/img_blogueros.jpg">
+								    </a>
+								</div>
+								<div class="media-body">
+									<a>
+								    <h4 class="media-heading">
+								    <u class="subrayado">Augusto Álvarez Rodrich</u>
+								    <p><b>Charlie Hebdo, historia que no debe repetirse</b></p></h4>
+								    </a>
+								</div>
+								</div>
+								<div class="media">
+								<div class="media-left media-middle">
+								    <a href="#">
+								      <img class="media-object" src="image/img_blogueros.jpg" alt="image/img_blogueros.jpg">
+								    </a>
+								</div>
+								<div class="media-body">
+								    <a>
+								    <h4 class="media-heading">
+								    <u class="subrayado">Augusto Álvarez Rodrich</u>
+								    <p><b>Charlie Hebdo, historia que no debe repetirse</b></p></h4>
+								    </a>
+								</div>
+							</div>
+							<div class="visible-lg">
+								<hr>
+									<hr size="100%" class="gcarlin"/>
+									<div class="gtext center-block bcr">
+										<h5 class="text-center">EDICIÓN IMPRESA</h5>
+									</div>
+										<a href="#">
+										<p class="text-center textcar"><b>La República - Lima</b></p>
+										</a>
+									<div>
+										<a href="#">
+										<img class="titular" src="image/img_impreso_sd_prominent.jpg">
+										</a>
+									</div>
+									<div class="media">
+									<div class="media-left media-middle">
+									    <a href="#">
+									      <img class="media-object" src="image/img_impreso_sd.jpg" alt="image/img_impreso_sd.jpg">
+									    </a>
+									</div>
+									<div class="media-body">
+										<a class="encabezado">
+									    <h4 class="media-heading">  
+									    <p><b>Extorsionan a menores en colegios</b></p></h4>
+									    <u>La República - Sur</u>
+									    </a>
+									</div>
+									</div>
+									<div class="media">
+									<div class="media-left media-middle">
+									    <a href="#">
+									      <img class="media-object" src="image/img_impreso_sd.jpg" alt="image/img_impreso_sd.jpg">
+									    </a>
+									</div>
+									<div class="media-body">
+										<a class="encabezado">
+									    <h4 class="media-body">    
+									    <p><b>Extorsionan a menores en colegios</b></p></h4>
+									    <u>La República - Sur</u>
+									    </a>
+									</div>
+									</div>
+									<div class="media">
+									<div class="media-left media-middle">
+									    <a href="#">
+									      <img class="media-object" src="image/img_impreso_sd.jpg" alt="image/img_impreso_sd.jpg">
+									    </a>
+									</div>
+									<div class="media-body">
+										<a class="encabezado">
+									    <h4 class="media-body">
+									    <p><b>Extorsionan a menores en colegios</b></p></h4>
+									    <u>La República - Sur</u>
+									    </a>
+									</div>
+									</div>
+									<hr>
+									<hr class="gtitulo">
+									<div class="gtext center-block bcg">
+										<h5 class="text-center">INFOGRAFÍAS</h5>
+									</div>
+									<div class="ollanta">
+										<div class="rlj center-block">
+											<a href="#">
+												<p class="text-center">Régimen laboral juvenil</p>
+											</a>
+										</div>
+									</div>
+									<div class="ollanta">
+										<div class="rlj center-block">
+											<a href="#">
+												<p class="text-center">Régimen laboral juvenil</p>
+											</a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="rmp">
+								<div class="reportero">
+									<div class="row">
+											<div class="col-lg-12 col-sm-6 ml mt">
+											<img src="image/img_pregunta.png">
+											<div class="pregunta">
+												<h5 class="text-center"><strong>La pregunta de hoy</strong></h5>
+												<p>¿Cree usted que la premier Ana Jara debe renunciar</p>
+												<div class="radio">
+												  <label>
+												    <input type="radio" name="blankRadio" id="blankRadio1" value="option1" aria-label="...">Si
+												  </label>
+												</div>
+												<div class="radio">
+												  <label>
+												    <input type="radio" name="blankRadio" id="blankRadio1" value="option1" aria-label="...">No
+												  </label>
+												</div>
+												<button type="button" class="btn btn-lg btn-danger">VOTAR</button>
+												<p class="text-center">
+													<a  class=" enlaces" href="#"><strong>Ver resultados</strong></a>
+												</p>
+											</div>
+											</div>
+											<div class="col-lg-12 col-sm-6 mr">
+											<div class="preayer pregunta">
+											<h5><strong>La pregunta de ayer</strong></h5>
+											<p>¿Cree usted que se militarizó la conmemoración del fallo de La Haya en Lima?</p>
+											<div class="progress">
+											  <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">55%
+											    <span class="sr-only">55% Complete (success) </span>
+											  </div>
+											  <div class="progress-bar progress-bar-success progress-bar-striped fondo" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+											    <span class="sr-only">55% Complete (success) </span>
+											  </div>  
+											</div>
+											<div class="progress">
+											  <div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 40%">25%
+											    <span class="sr-only">25% Complete (danger)</span>
+											  </div>
+											  <div class="progress-bar progress-bar-success progress-bar-striped fondo" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+											    <span class="sr-only">55% Complete (success) </span>
+											  </div>  
+											</div>
+											<p class="text-center">
+											<a class="enlaces" href="#"><strong>Ver preguntas pasadas</strong></a>
+											</p>
+											</div>
+											</div>
+									</div>
+								</div>
+							</div>
+							<div class="rmp">
+								<div class="row">
+									<div class="col-lg-12 col-sm-6 ml">
+										<div class="reportero">
+												<img src="image/img_reporteroc.png">
+												<div class="pregunta">
+													<h4 class="text-center"><strong>Reportero ciudadano</strong></h4>
+													<img class="auto" src="image/img_sd_reporteroc.jpg">
+													<h5><strong>Estacionamiento indebido</strong></h5>
+													<p>¿Está permitido que dejen su auto <br> reiteradas ocasiones toda la noche en la <br>puerta de tu casa? Placa DG6232, eso <br>que antes lo dejaba entre la vereda y mi puerta </p>
+												</div>
+												<button type="button" class="btn btn-lg btn-danger">ENVIAR FOTOS</button>
+												<p class="text-center">
+													<a  class="enlaces" href="#"> <strong>Mas fotos</strong></a>
+												</p>
+										</div>
+									</div>
+									<div class="col-lg-12 col-sm-6 mr">
+										<div class="reportero">
+												<img src="image/img_mascota.png">
+												<div class="pregunta">
+													<h4 class="text-center"><strong>Mi mascota</strong></h4>
+													<img class="auto" src="image/img_sd_mascota.jpg">
+													<h5><strong>El cono de la verguenza</strong></h5>
+													<p>Luego de una operación, mi príncipe <br> recuperándose.Fue un niño muy<br>valiente, asi que ni bien se recupere nos<br>lo llevaremos a Italia a pasear y comer lasañas.</p>
+												</div>
+												<button type="button" class="btn btn-lg btn-danger">ENVIAR FOTOS</button>
+												<p class="text-center">
+													<a  class="enlaces" href="#"> <strong>Mas fotos</strong></a>
+												</p>
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 
