--- a/columnistas.html
+++ b/columnistas.html
@@ -18,6 +18,140 @@
         <p class="espacio titulo">LO ÚLTIMO EN COLUMNISTAS</p>
         <img  class="double" src="image/double-arrow-bottom.png">
     </div>
+    <div class="container columnistas-e">
+        <p class="espacio titulo">TODOS LOS COLUMNISTAS</p>
+        <img  class="double" src="image/double-arrow-bottom.png">
+            <div class="fondo">
+                <nav aria-label="...">
+                  <ul class="pager">
+                    <li><a href="#">Todos</a></li>
+                    <li><a href="#">ABC</a></li>
+                    <li><a href="#">DEF</a></li>
+                    <li><a href="#">JKL</a></li>
+                    <li><a href="#">MNO</a></li>
+                    <li><a href="#">PQRS</a></li>
+                    <li><a href="#">TUV</a></li>
+                    <li><a href="#">WXYZ</a></li>
+                  </ul>
+                </nav>
+            </div>
+    </div>
+    <div class="container columnistas-e">
+        <div class="row">
+            <div class="col-lg-3 col-sm-6 col-xs-12">
+                <div class="colum1">
+                    <img src="image/img_author_columnista.jpg" alt="bloguero" class="img-thumbnail ">
+                    <p class="espacio">
+                    <span class="left">Augusto Alvarez Rodrich</span>
+                    <p class="intelineado"><a href="#" class="blog">Claro y directo</a></p>
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6 col-xs-12">
+                <div class="colum1">
+                    <img src="image/img_author_columnista.jpg" alt="bloguero" class="img-thumbnail ">
+                    <p class="espacio">
+                    <span class="left">Augusto Alvarez Rodrich</span>
+                    <p class="intelineado"><a href="#" class="blog">Claro y directo</a></p>
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6 col-xs-12">
+                <div class="colum1">
+                    <img src="image/img_author_columnista.jpg" alt="bloguero" class="img-thumbnail ">
+                    <p class="espacio">
+                    <span class="left">Augusto Alvarez Rodrich</span>
+                    <p class="intelineado"><a href="#" class="blog">Claro y directo</a></p>
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6 col-xs-12">
+                <div class="colum1">
+                    <img src="image/img_author_columnista.jpg" alt="bloguero" class="img-thumbnail ">
+                    <p class="espacio">
+                    <span class="left">Augusto Alvarez Rodrich</span>
+                    <p class="intelineado"><a href="#" class="blog">Claro y directo</a></p>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-3 col-sm-6 col-xs-12">
+                <div class="colum1">
+                    <img src="image/img_author_columnista.jpg" alt="bloguero" class="img-thumbnail ">
+                    <p class="espacio">
+                    <span class="left">Augusto Alvarez Rodrich</span>
+                    <p class="intelineado"><a href="#" class="blog">Claro y directo</a></p>
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6 col-xs-12">
+                <div class="colum1">
+                    <img src="image/img_author_columnista.jpg" alt="bloguero" class="img-thumbnail ">
+                    <p class="espacio">
+                    <span class="left">Augusto Alvarez Rodrich</span>
+                    <p class="intelineado"><a href="#" class="blog">Claro y directo</a></p>
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6 col-xs-12">
+                <div class="colum1">
+                    <img src="image/img_author_columnista.jpg" alt="bloguero" class="img-thumbnail ">
+                    <p class="espacio">
+                    <span class="left">Augusto Alvarez Rodrich</span>
+                    <p class="intelineado"><a href="#" class="blog">Claro y directo</a></p>
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6 col-xs-12">
+                <div class="colum1">
+                    <img src="image/img_author_columnista.jpg" alt="bloguero" class="img-thumbnail ">
+                    <p class="espacio">
+                    <span class="left">Augusto Alvarez Rodrich</span>
+                    <p class="intelineado"><a href="#" class="blog">Claro y directo</a></p>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-3 col-sm-6 col-xs-12">
+                <div class="colum1">
+                    <img src="image/img_author_columnista.jpg" alt="bloguero" class="img-thumbnail ">
+                    <p class="espacio">
+                    <span class="left">Augusto Alvarez Rodrich</span>
+                    <p class="intelineado"><a href="#" class="blog">Claro y directo</a></p>
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6 col-xs-12">
+                <div class="colum1">
+                    <img src="image/img_author_columnista.jpg" alt="bloguero" class="img-thumbnail ">
+                    <p class="espacio">
+                    <span class="left">Augusto Alvarez Rodrich</span>
+                    <p class="intelineado"><a href="#" class="blog">Claro y directo</a></p>
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6 col-xs-12">
+                <div class="colum1">
+                    <img src="image/img_author_columnista.jpg" alt="bloguero" class="img-thumbnail ">
+                    <p class="espacio">
+                    <span class="left">Augusto Alvarez Rodrich</span>
+                    <p class="intelineado"><a href="#" class="blog">Claro y directo</a></p>
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-sm-6 col-xs-12">
+                <div class="colum1">
+                    <img src="image/img_author_columnista.jpg" alt="bloguero" class="img-thumbnail ">
+                    <p class="espacio">
+                    <span class="left">Augusto Alvarez Rodrich</span>
+                    <p class="intelineado"><a href="#" class="blog">Claro y directo</a></p>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
