--- a/blog.html
+++ b/blog.html
@@ -14,6 +14,105 @@
 </head>
 <body>
 <!--codigo de paola-->
+<div class="header-sup family-oswald">
+        <div class="container">
+            <header>
+                <a href="#">
+                    <img  class="img-responsive img-cien" src="image/banner_top.jpg"/>
+                </a>
+                <div class="row">
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 enlaces">
+                        <a href="#">LIBERO.PE</a>
+                        <a href="#">ELPOPULAR.PE</a>
+                        <a href="#">FUNDACIÓN GUSTAVO MOHME LLONA</a>
+                    </div>
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 buscador text-right">
+                        <button type="button" class="btn btn-danger">SUSCRÍBETE AL BOLETÍN</button>
+                        <a href="#"><i class="icon fa fa-facebook"></i></a>
+                        <a href="#"><i class="icon fa fa-twitter"></i></a>
+                        <a href="#"><i class="icon fa fa-google-plus"></i></a>
+                        <a href="#"><i class="icon fa fa-envelope"></i></a>
+                        <a href="#"><i class="icon fa fa-rss"></i></a>
+                        <form class="form-inline">
+                            <input type="text" id="exampleInputName2" class="text-center" placeholder="BUSCAR">
+                            <button type="submit"><i class="fa fa-search"></i></button><span class="line"></span>
+                        </form>
+                    </div>
+                </div>
+            </header>   
+        </div>
+    </div>
+    <div class="container family-oswald">
+        <header class="header-logo">
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                    <img class="logo-img" src="image/logo-la-republica.jpg"/>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 box-autor">
+                    <div class="noticia-nac text-center">
+                        <div class="domingo">DOMINGO</div>
+                        HABLA LA LIDERESA DEL NACIONALISMO
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                    <div class="autor-fondo">
+                        <div class="autor">
+                            <img class="img-editorial" src="image/img_editorial_text.jpg"/>
+                            <div class="text-autor text-center">
+                                <b>La corrupción, los orígenes</b><br>
+                                por: Gustavo Mohme Llona
+                            </div>
+                            <img class="img-autor" src="image/img_author.jpg"/> 
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <div class="bg-red visible-lg visible-md hidden-sm hidden-xs">
+            <a href="#" class="nav-red btn-nav linea-black">POLÍTICA</a>
+            <a href="#" class="nav-red btn-nav linea-black">ECONOMÍA</a>
+            <a href="#" class="nav-red btn-nav linea-black">SOCIEDAD</a>
+            <a href="#" class="nav-red btn-nav linea-black">ELECC. REGIONALES</a>
+            <a href="#" class="nav-red btn-nav linea-black">DEPORTES</a>
+            <a class="nav-blue btn-nav linea-black" href="#">CHAMPIONS L.</a>
+            <a href="#" class="nav-red btn-nav linea-black">ESPECTÁCULOS</a>
+            <a href="#" class="nav-red btn-nav linea-black">ED. IMPRESA</a>
+            <a href="#" class="nav-red btn-nav linea-black">REGIONALES</a>
+            <a href="#" class="nav-red btn-nav">MÁS SECCIONES</a>
+        </div>
+
+        <div class="bg-gray-nav">
+            <ul class="list-unstyled">
+                <li class="btn-black btn-nav-gray visible-lg visible-md visible-sm visible-xs">
+                    TEMAS DEL DÍA
+                </li>
+                <li class="nav-gray visible-lg visible-md visible-sm visible-xs">
+                    <a href="#" class=" btn-nav-gray">Globos de oro</a>
+                </li>
+                <li class="nav-gray visible-lg visible-md visible-sm visible-xs">
+                    <a href="#" class=" btn-nav-gray">Youtube</a>
+                </li>
+                <li class="nav-gray visible-lg visible-md visible-sm hidden-xs">
+                    <a href="#" class="btn-nav-gray">PNP</a>
+                </li>
+                <li class="nav-gray visible-lg visible-md visible-sm hidden-xs">
+                    <a href="#" class="btn-nav-gray">Charlie Hebdo</a>
+                </li>
+                <li class="nav-gray visible-lg visible-md visible-sm hidden-xs">
+                    <a class="btn-nav-gray" href="#">Globos de oro 2</a>
+                </li>
+                <li class="nav-gray visible-lg visible-md hidden-sm hidden-xs">
+                    <a href="#" class="btn-nav-gray">Youtube 2</a>
+                </li>
+                <li class="nav-gray visible-lg visible-md hidden-sm hidden-xs">
+                    <a href="#" class="btn-nav-gray">PNP 2</a>
+                </li>
+                <li class="nav-gray visible-lg visible-md hidden-sm hidden-xs">
+                    <a href="#" class="btn-nav-gray">Charlie Hebdo 2</a>
+                </li>
+            </ul>
+        </div>
+    </div>
 	<section class="blogspage">
 		<div class="container">
 			<div class="titulo">
@@ -253,7 +352,125 @@
 			</div>
 		</div>
 	</section>
-
+    <div class="container-fluid gray-grupo-lr">
+            <footer class="grupo-lr">
+                <div class="container">
+                    <div class="row visible-lg">
+                        <div class="col-lg-4 info">
+                            <img src="image/logo-grupo-la-republica.png">
+                            <h5><strong>Grupo La República Digital</strong></h5>
+                            <p>Jr. Camaná 320 Cercado de Lima</p>
+                            <p>Teléfono: 711-6000</p>
+                            <p>(Central Telefónica)</p>
+                            <p>Todos los derechos reservados - 2015</p>
+                        </div>
+                        <div class="col-lg-8">
+                            <div class="col-lg-3 grupo-lr1">
+                                <a href="#">Roger Federer</a>  
+                                <a href="#">SBS</a>  
+                                <a href="#">Scarlett Johansson</a>  
+                                <a href="#">Scotiabank</a>  
+                                <a href="#">Selena Gómez</a>  
+                                <a href="#">Spiderman</a>  
+                                <a href="#">Sporting Cristal</a>  
+                                <a href="#">Sunat</a>  
+                                <a href="#">Telefónica del Perú</a>  
+                                <a href="#">The Walking Dead</a>  
+                                <a href="#">Twitter</a>  
+                                <a href="#">Universidad Cesar 
+                                Vallejo</a>  
+                                <a href="#">Universidad San Martín</a>  
+                                <a href="#">Univesitario de<br>  
+                                Deportes</a>  
+                                <a href="#">Xbox</a>  
+                                <a href="#">Youtube</a>  
+                                <a href="#">Bayern Múnich</a>  
+                                <a href="#">Bayern Múnich</a>  
+                                <a href="#">BBVA</a>  
+                                <a href="#">Xbox</a>  
+                                <a href="#">BCP</a>  
+                            </div>
+                            <div class="col-lg-3 grupo-lr1">
+                                <a href="#">Al fondo hay sitio</a>  
+                                <a href="#">Alejandro Toledo</a>  
+                                <a href="#">Alianza Lima</a>  
+                                <a href="#">Alianza Lima</a>  
+                                <a href="#">Banco de la Nación</a>   
+                                <a href="#">Barack Obama</a>  
+                                <a href="#">Universidad Cesar<br>   
+                                Vallejo</a>  
+                                <a href="#">Universidad San Martín</a> 
+                                <a href="#">Barcelona</a> 
+                                <a href="#">Bayern Múnich</a>  
+                                <a href="#">Bayern Múnich</a>  
+                                <a href="#">BBVA</a>  
+                                <a href="#">Xbox</a>  
+                                <a href="#">BCP</a> 
+                                <a href="#">Batman</a>
+                                <a href="#">Bayern Múnich</a>  
+                                <a href="#">Bayern Múnich</a>  
+                                <a href="#">BBVA</a>  
+                                <a href="#">Xbox</a>  
+                                <a href="#">BCP</a> 
+                            </div>
+                            <div class="col-lg-3 grupo-lr1">
+                                <a href="#">One Direction</a> 
+                                <a href="#">ONPE</a> 
+                                <a href="#">Pablo Escobar</a> 
+                                <a href="#">Paolo Guerrero</a> 
+                                <a href="#">Pensión 65</a> 
+                                <a href="#">PNP</a> 
+                                <a href="#">Precio del dólar</a> 
+                                <a href="#">Universidad Cesar<br>   
+                                Vallejo</a>  
+                                <a href="#">Universidad San Martín</a> 
+                                <a href="#">Premier League</a>  
+                                <a href="#">Bayern Múnich</a>  
+                                <a href="#">Bayern Múnich</a>  
+                                <a href="#">BBVA</a>  
+                                <a href="#">Xbox</a>  
+                                <a href="#">BCP</a> 
+                                <a href="#">Proyecto Conga</a>              
+                                <a href="#">PUCP</a> 
+                                <a href="#">Real Madrid</a>             
+                                <a href="#">Redes sociales</a>          
+                                <a href="#">Reniec</a>                      
+                                <a href="#">Robert Pattinson</a>            
+                            </div>
+                            <div class="col-lg-3 grupo-lr1">
+                                <a href="#">Al fondo hay sitio</a>  
+                                <a href="#">Alejandro Toledo</a>  
+                                <a href="#">Alianza Lima</a>  
+                                <a href="#">Alianza Lima</a>  
+                                <a href="#">Banco de la Nación</a>   
+                                <a href="#">Barack Obama</a>  
+                                <a href="#">Universidad Cesar<br>  
+                                Vallejo</a>     
+                                <a href="#">Bayern Múnich</a>  
+                                <a href="#">Bayern Múnich</a>  
+                                <a href="#">BBVA</a>  
+                                <a href="#">Xbox</a>  
+                                <a href="#">BCP</a> 
+                                <a href="#">Universidad San Martín</a> 
+                                <a href="#">Barcelona</a> 
+                                <a href="#">Batman</a>
+                                <a href="#">Bayern Múnich</a>  
+                                <a href="#">Bayern Múnich</a>  
+                                <a href="#">BBVA</a>  
+                                <a href="#">Xbox</a>  
+                                <a href="#">BCP</a>                         
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row visible-lg">
+                        <p class="footer-text text-center">Diarios del PAL: Clarín | La Tercera | El Universal Colombia | El Universal Venezuela | Vanguardia | La Prensa | El Salvador | La Verdad | Diario Libre | El diario de hoy | El Colombiano</p>
+                    </div>
+                </div>
+                <div class="row dark-gray-grupo-lr visible-sm visible-xs visible-md">
+                    <h3 class="text-center"><strong>Grupo La República Digital</strong></h3>
+                    <h5 class="text-center">Todos los derechos reservados - 2015</h5>
+            </footer>
+        </div>
 
 	<!-- JavaScript -->
 	<script type="text/javascript" src="js/jquery.min.js"></script>
