--- a/columnistas.html
+++ b/columnistas.html
@@ -10,6 +10,7 @@
     <link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet" type="text/css"/>
     <link href="http://fonts.googleapis.com/css?family=Oswald:400,700" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" type="text/css" href="css/columnistas.css"/>
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
 <div class="header-sup family-oswald">
