--- a/index.html
+++ b/index.html
@@ -182,8 +182,7 @@
 	</div>
 
 	<!-- Columnistas -->
-	<section class="container columnistas mt-70">
-
+	<section class="container columnistas">
 			<center>
 				<div class="box-red">
 					<p>COLUMNISTAS</p>
@@ -331,7 +330,7 @@
 						<div class="border">
 							<p class=" text-center red"><strong>Mercado de Pases 2015</strong></p>
 							<div class="img-deportes">
-								<div class="overlay-deporte">
+								<div class="overlay">
 									<a href="#" class="white"><strong>Mercado de paises 2015: altas, bajas <br> y rumores de los equipos peruanos</strong></a>
 								</div>
 							</div>
@@ -342,7 +341,7 @@
 						<div class="border">
 							<p class=" text-center red"><strong>Mercado de Pases 2015</strong></p>
 							<div class="img-deportes">
-								<div class="overlay-deporte">
+								<div class="overlay">
 									<a href="#" class="white"><strong>Mercado de paises 2015: altas, bajas <br> y rumores de los equipos peruanos</strong></a>
 								</div>
 							</div>
@@ -355,7 +354,7 @@
 						<div class="border">
 							<p class=" text-center red"><strong>Mercado de Pases 2015</strong></p>
 							<div class="img-deportes">
-								<div class="overlay-deporte">
+								<div class="overlay">
 									<a href="#" class="white"><strong>Mercado de paises 2015: altas, bajas <br> y rumores de los equipos peruanos</strong></a>
 								</div>
 							</div>
@@ -366,7 +365,7 @@
 						<div class="border">
 							<p class=" text-center red"><strong>Mercado de Pases 2015</strong></p>
 							<div class="img-deportes">
-								<div class="overlay-deporte">
+								<div class="overlay">
 									<a href="#" class="white"><strong>Mercado de paises 2015: altas, bajas <br> y rumores de los equipos peruanos</strong></a>
 								</div>
 							</div>
@@ -389,6 +388,101 @@
 					<div class="row">
 						<h4 class="ult-noticias">ULTIMAS NOTICIAS <img src="image/double-arrow-bottom.png" alt="arrow"></h4>
 						<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
+							<div class="row border-b">
+								<h6 class="gray-em">Hace 1 hora 12 mins</h6>
+								<a href="#" class="titulo"><h4><strong>Emma Watson protagonizará 'La bella y la bestia' | VIDEO</strong></h4></a>								
+								<div class="col-xs-12 col-sm-4 col-md-4">
+									<img class="img-news img-responsive" src="image/img_news.jpg" alt="news">
+								</div>
+								<div class="col-xs-12 col-sm-8 col-md-8">
+									<p class="fs-p">La actriz Emma Watson fue confirmada por Disney como la protagonista de 'La bella y la bestia' en la versión de carne y hueso.</p>
+									<div class="fl-p">		
+										<a class="bg-if text-center" href="#"><i class="fa fa-facebook"></i></a>
+										<a class="bg-it text-center" href="#"><i class="fa fa-twitter"></i></a>
+										<a class="bg-ig text-center" href="#"><i class="fa fa-google-plus"></i></a>
+										<img class="g-boton" src="image/bullet.gif" alt="bullet">
+										<img src="image/ico_comment.png" alt="comment"> <span class="gray-em">10</span>
+										<img class="g-boton" src="image/bullet.gif" alt="bullet"><a class="gray-em" href="#">POLÍTICA</a>
+										<img class="g-boton" src="image/bullet.gif" alt="bullet"> <i class="fa fa-youtube-play"></i>
+									</div>	
+								</div>
+							</div>
+							<div class="row border-b">
+								<h6 class="gray-em">Hace 1 hora 12 mins</h6>
+								<a href="#" class="titulo"><h4><strong>Emma Watson protagonizará 'La bella y la bestia' | VIDEO</strong></h4></a>								
+								<div class="col-xs-12 col-sm-4 col-md-4">
+									<img class="img-news img-responsive" src="image/img_news.jpg" alt="news">
+								</div>
+								<div class="col-xs-12 col-sm-8 col-md-8">
+									<p class="fs-p">La actriz Emma Watson fue confirmada por Disney como la protagonista de 'La bella y la bestia' en la versión de carne y hueso.</p>
+									<div class="fl-p">		
+										<a class="bg-if text-center" href="#"><i class="fa fa-facebook"></i></a>
+										<a class="bg-it text-center" href="#"><i class="fa fa-twitter"></i></a>
+										<a class="bg-ig text-center" href="#"><i class="fa fa-google-plus"></i></a>
+										<img class="g-boton" src="image/bullet.gif" alt="bullet">
+										<img src="image/ico_comment.png" alt="comment"> <span class="gray-em">10</span>
+										<img class="g-boton" src="image/bullet.gif" alt="bullet"><a class="gray-em" href="#">POLÍTICA</a>
+										<img class="g-boton" src="image/bullet.gif" alt="bullet"> <i class="fa fa-youtube-play"></i>
+									</div>	
+								</div>
+							</div>
+							<div class="row border-b">
+								<h6 class="gray-em">Hace 1 hora 12 mins</h6>
+								<a href="#" class="titulo"><h4><strong>Emma Watson protagonizará 'La bella y la bestia' | VIDEO</strong></h4></a>								
+								<div class="col-xs-12 col-sm-4 col-md-4">
+									<img class="img-news img-responsive" src="image/img_news.jpg" alt="news">
+								</div>
+								<div class="col-xs-12 col-sm-8 col-md-8">
+									<p class="fs-p">La actriz Emma Watson fue confirmada por Disney como la protagonista de 'La bella y la bestia' en la versión de carne y hueso.</p>
+									<div class="fl-p">		
+										<a class="bg-if text-center" href="#"><i class="fa fa-facebook"></i></a>
+										<a class="bg-it text-center" href="#"><i class="fa fa-twitter"></i></a>
+										<a class="bg-ig text-center" href="#"><i class="fa fa-google-plus"></i></a>
+										<img class="g-boton" src="image/bullet.gif" alt="bullet">
+										<img src="image/ico_comment.png" alt="comment"> <span class="gray-em">10</span>
+										<img class="g-boton" src="image/bullet.gif" alt="bullet"><a class="gray-em" href="#">POLÍTICA</a>
+										<img class="g-boton" src="image/bullet.gif" alt="bullet"> <i class="fa fa-youtube-play"></i>
+									</div>	
+								</div>
+							</div>
+							<div class="row border-b">
+								<h6 class="gray-em">Hace 1 hora 12 mins</h6>
+								<a href="#" class="titulo"><h4><strong>Emma Watson protagonizará 'La bella y la bestia' | VIDEO</strong></h4></a>								
+								<div class="col-xs-12 col-sm-4 col-md-4">
+									<img class="img-news img-responsive" src="image/img_news.jpg" alt="news">
+								</div>
+								<div class="col-xs-12 col-sm-8 col-md-8">
+									<p class="fs-p">La actriz Emma Watson fue confirmada por Disney como la protagonista de 'La bella y la bestia' en la versión de carne y hueso.</p>
+									<div class="fl-p">		
+										<a class="bg-if text-center" href="#"><i class="fa fa-facebook"></i></a>
+										<a class="bg-it text-center" href="#"><i class="fa fa-twitter"></i></a>
+										<a class="bg-ig text-center" href="#"><i class="fa fa-google-plus"></i></a>
+										<img class="g-boton" src="image/bullet.gif" alt="bullet">
+										<img src="image/ico_comment.png" alt="comment"> <span class="gray-em">10</span>
+										<img class="g-boton" src="image/bullet.gif" alt="bullet"><a class="gray-em" href="#">POLÍTICA</a>
+										<img class="g-boton" src="image/bullet.gif" alt="bullet"> <i class="fa fa-youtube-play"></i>
+									</div>	
+								</div>
+							</div>
+							<div class="row border-b">
+								<h6 class="gray-em">Hace 1 hora 12 mins</h6>
+								<a href="#" class="titulo"><h4><strong>Emma Watson protagonizará 'La bella y la bestia' | VIDEO</strong></h4></a>								
+								<div class="col-xs-12 col-sm-4 col-md-4">
+									<img class="img-news img-responsive" src="image/img_news.jpg" alt="news">
+								</div>
+								<div class="col-xs-12 col-sm-8 col-md-8">
+									<p class="fs-p">La actriz Emma Watson fue confirmada por Disney como la protagonista de 'La bella y la bestia' en la versión de carne y hueso.</p>
+									<div class="fl-p">		
+										<a class="bg-if text-center" href="#"><i class="fa fa-facebook"></i></a>
+										<a class="bg-it text-center" href="#"><i class="fa fa-twitter"></i></a>
+										<a class="bg-ig text-center" href="#"><i class="fa fa-google-plus"></i></a>
+										<img class="g-boton" src="image/bullet.gif" alt="bullet">
+										<img src="image/ico_comment.png" alt="comment"> <span class="gray-em">10</span>
+										<img class="g-boton" src="image/bullet.gif" alt="bullet"><a class="gray-em" href="#">POLÍTICA</a>
+										<img class="g-boton" src="image/bullet.gif" alt="bullet"> <i class="fa fa-youtube-play"></i>
+									</div>	
+								</div>
+							</div>
 							<div class="row border-b">
 								<h6 class="gray-em">Hace 1 hora 12 mins</h6>
 								<a href="#" class="titulo"><h4><strong>Emma Watson protagonizará 'La bella y la bestia' | VIDEO</strong></h4></a>								
