--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<title>La República</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet" type="text/css"/>
-	<link href="http://fonts.googleapis.com/css?family=Oswald:400,700" rel="stylesheet" type="text/css"/>
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet" type="text/css"/>
+	<link href="https://fonts.googleapis.com/css?family=Oswald:400,700" rel="stylesheet" type="text/css"/>
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.css"/>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
   	<link rel="stylesheet" type="text/css" href="css/main.css"/>
